[package]
authors = ["kennycallado <kennycallado@hotmail.com>"]
description = "Simple way to scale your application"
edition = "2021"
license = "MIT"
name = "escalon"
readme = "README.md"
repository = "https://github.com/kennycallado/escalon"
version = "0.1.3"

[profile.release]
lto = true
opt-level = "z"
strip = true

[lib]
name = "escalon"
path = "src/lib.rs"

[[example]]
name = "base"
path = "examples/base.rs"

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
procinfo = "0.4.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }

[dev-dependencies]
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }
