[package]
authors = ["kennycallado <kennycallado@hotmail.com>"]
description = "UDP communication layer for the Escalon project"
edition = "2021"
license = "MIT"
name = "escalon"
readme = "README.md"
repository = "https://github.com/kennycallado/escalon"
version = "0.1.11"

[profile.release]
lto = true
opt-level = "z"
strip = true

[lib]
name = "escalon"
path = "src/lib.rs"

[[example]]
name = "base"
path = "examples/base.rs"

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.26"
# memory-stats = "1.1.0"
# procfs = "0.15.1"
# procinfo = "0.4.2" # Not maintained anymore
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.75"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }
